# NBodySimulation

./: CMakeLists.txt  NBody.cpp  README.md
include/: body.h
opencl/: NBody.cl
src/: body.cpp
